add github address

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: openrpc_dart
 description: An OpenRPC JSON Spec Parser, fromJson and toJson
 version: 0.1.0
+repository: https://github.com/djbird2046/openrpc_dart
 
 environment:
   sdk: ^3.3.4
